<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backToNeighborsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageView
        android:id="@+id/neighborImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/image_description"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/neighborNameTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborImage"

        android:text="@string/name"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/neighborName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborNameTitle"

        android:text="@string/defaultInfo"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/neighborPhoneTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborName"

        android:text="@string/phone"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/neighborPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborPhoneTitle"

        android:text="@string/defaultInfo"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/neighborWebsiteTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborPhone"

        android:text="@string/website"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/neighborWebsite"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborWebsiteTitle"

        android:text="@string/defaultInfo"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/neighborAddressTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborWebsite"

        android:text="@string/address"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/neighborAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborAddressTitle"

        android:text="@string/defaultInfo"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/neighborAboutMeTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborAddress"

        android:text="@string/about"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/neighborAboutMe"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/neighborAboutMeTitle"

        android:text="@string/defaultInfo"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/neighborFavorite"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/makeFavorite"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/neighborAboutMe" />

</androidx.constraintlayout.widget.ConstraintLayout>
